crates/forge_markdown_stream/src/snapshots/forge_markdown_stream__table__tests__unicode_content.snap
---
source: crates/forge_markdown_stream/src/table.rs
expression: "render(vec![vec![\"名前\", \"年齢\"], vec![\"田中\", \"25\"],])"
---
  ┌──────┬──────┐
  │ 名前 │ 年齢 │
  ├──────┼──────┤
  │ 田中 │ 25   │
  └──────┴──────┘
